# crumb

./: .gitignore  AUDIT.md  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crumb/: __init__.py  actor_binding_demo.py  agent.py  anchor.py  anchor_demo.py  auth.py  cli.py  cross_issuer_demo.py  cross_vendor_demo.py  demo.py  federation.py  gateway.py  hijack_demo.py  idp.py  idp_demo.py  jwks_federation_demo.py  ledger.py  mcp_http.py  mcp_server.py  merkle.py  multihop_demo.py  tamper_demo.py  tokens.py  tools.py  verify.py  vigil_adapter.py  vigil_adapter_demo.py  web.py
crumb/static/: index.html
docs/: devto-cross-issuer.md  devto-jwks-federation.md  devto-patient-record.md  x-thread-crumb.md
tests/: test_actor_binding.py  test_detection_drift_attribution.py  test_hijack_attribution.py  test_integrity.py  test_jwks_federation.py  test_verify_entries.py  test_vigil_adapter.py
